apps/woodpecker/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woodpecker-route
  namespace: woodpecker
spec:
  parentRefs:
  - name: main-gateway
    namespace: gateway-system
  hostnames:
  - "woodpecker.cluster.stevenchen.one"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: woodpecker-server
      port: 80
